syntax = "proto3";

package user;

option go_package = "./proto/pb";

import "proto/common.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (common.AbsResponse);
  rpc GetUserByChatIdOrPhone(GetUserByChatIdOrPhoneRequestOrId) returns (common.User);
  rpc GetAllUsers(common.PageRequest) returns (GetAllUserResponse);
  rpc UpdateNameSurname(UpdateUserNameSurnameRequest) returns(common.AbsResponse);
}

message CreateUserRequest {
  string name = 1;
  string surname = 2;
  string chatId = 3;
  string phoneNumber = 4;
}

message GetUserByChatIdOrPhoneRequestOrId {
  optional string chatId = 1;
  optional string phoneNumber = 2;
  optional string id = 3;
}

message GetAllUserResponse {
  repeated common.User users = 1;
  int32 totalPages = 2;
}

message UpdateUserNameSurnameRequest{
  string name = 1;
  string surname = 2;
}